--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Welcome to GNTRR's Web!</title>
 
     <!-- Internal CSS here -->
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <!-- Google Fonts CDN -->
     <link
