--- a/id.html
+++ b/id.html
@@ -7,7 +7,7 @@
     <title>Selamat datang di Web GNTRR!</title>
 
     <!-- Internal CSS here -->
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <!-- Google Fonts CDN -->
     <link
