--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>My Portfolio - GNTRR's Web</title>
 
     <!-- Internal CSS here -->
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <!-- Google Fonts CDN -->
     <link
