--- a/portofolio.html
+++ b/portofolio.html
@@ -7,7 +7,7 @@
     <title>Portofolio ku - Web GNTRR</title>
 
     <!-- Internal CSS here -->
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 
     <!-- Google Fonts CDN -->
     <link
