--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       <!-- navigation bar here -->
       <nav class="navbar">
         <!-- a toogle to change a language -->
-        <a class="translate" href="portofolioku.html">English</a>
+        <a class="translate" href="portofolio.html">English</a>
         <!-- #endregion -->
         <span class="open-slide">
           <a href="#" onclick="openSlideMenu()">
