--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Internal CSS here -->
     <link rel="stylesheet" href="./styles/style.css" />
+    
+    <!-- Favicon here -->
+    <link rel="shortcut icon" href="./img/favicon.ico" />
 
     <!-- Google Fonts CDN -->
     <link
