update user scalable

--- a/id.html
+++ b/id.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <title>Selamat datang di Web GNTRR!</title>
 
     <!-- Internal CSS here -->
     <link rel="stylesheet" href="./styles/style.css" />
-    
+
     <!-- Favicon here -->
     <link rel="shortcut icon" href="./img/favicon.ico" />
 
