update new style + adding description of content

--- a/id.html
+++ b/id.html
@@ -62,7 +62,7 @@
             onclick="closeSlideMenu()"
           ></a>
         </div>
-        <a href="id.html">Beranda</a>
+        <a href="./index.html">Beranda</a>
         <a href="portofolio.html">Portofolio ku</a>
       </div>
       <!-- main content here -->
@@ -103,16 +103,25 @@
           <!-- MAIN CONTENT HERE -->
           <h3>Hasil karya terbaru aku</h3>
           <!-- my content (YT or Instagram) -->
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/bJGLKNRZNv0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/bJGLKNRZNv0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Film pendek ini dibuat untuk tugas akhir kelas 12 SMK pada waktu
+              itu. Menceritakan tentang sosok anak yang kehilangan suatu benda
+              karena dicuri oleh teman sekelasnya. Namun pada akhirnya terungkap
+              siapa pelakunya meskipun si temannya tersebut tidak jujur. Kok
+              bisa terungkap sih? Ditonton kuy.
+            </p>
           </div>
           <p class="interest">
             Ingin lihat lebih banyak hasil karya ku? pergi ke 'Portofolio ku'.
