--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Internal CSS here -->
     <link rel="stylesheet" href="./styles/style.css" />
 
+    <!-- #region -->
+
     <!-- Favicon here -->
     <link rel="shortcut icon" href="./img/favicon.ico" />
 
@@ -33,7 +35,7 @@
       <!-- navigation bar here -->
       <nav class="navbar">
         <!-- a toogle to change a language -->
-        <a class="translate" href="/id.html">English</a>
+        <a class="translate" href="/./id.html">English</a>
         <!-- #endregion -->
         <span class="open-slide">
           <a href="#" onclick="openSlideMenu()">
@@ -104,16 +106,25 @@
           <!-- MAIN CONTENT HERE -->
           <h3>My latest creation</h3>
           <!-- my content (YT or Instagram) -->
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/bJGLKNRZNv0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/bJGLKNRZNv0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              This short film was made for the final assignment of class 12
+              Vocational High School at that time. Tells about the figure of a
+              child who lost his things because it was stolen by a classmate.
+              But in the end it was revealed who the culprit even though the
+              classmate was not honest. How can it be revealed? go watch it.
+            </p>
           </div>
           <p class="interest">
             Want to see more of my creation? just go to 'My portfolio'.
