--- a/portfolio.html
+++ b/portfolio.html
@@ -69,66 +69,98 @@
       <section id="main">
         <div class="container">
           <!-- MAIN CONTENT HERE -->
-          <h1 style="font-size: x-large">My latest creation</h1>
+          <h1 style="font-size: x-large">My Portfolio</h1>
           <p>
-            This is all video created by myself. Yeah.. it still far from
-            perfect but i'll try my best to create a best visual story. I also
-            created other creation like lyric video and many more
+            These are all videos i made. Yeah.. it still far from perfect but i
+            keep trying to create a best visual story. I also created other
+            works like lyric videos and many more.
           </p>
           <br />
           <!-- my latest content (YT or Instagram) -->
           <h3>Short Movie</h3>
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/bJGLKNRZNv0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/bJGLKNRZNv0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              This short film was made for the final assignment of class 12
+              Vocational High School at that time. Tells about the figure of a
+              child who lost his things because it was stolen by a classmate.
+              But in the end it was revealed who the culprit even though the
+              classmate was not honest. How can it be revealed? go watch it.
+            </p>
           </div>
           <br />
           <!-- my latest content (YT or Instagram) -->
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/4pK8O_4i50A"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/4pK8O_4i50A"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              In this short film, I am the creator on my friend's channel. Tells
+              about a child who is kind enough to treat all his friends at a
+              cafe. But his good intentions were instead used as an opportunity
+              for one of his friends to do wrong. How come I'm curious... that's
+              why go watch it.
+            </p>
           </div>
           <br />
           <!-- my latest content (YT or Instagram) -->
           <h3>Lyric Video</h3>
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/4fhnXH8IemM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/4fhnXH8IemM"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              I actually made this video in free moment. I want to continue to
+              make lyric videos but will be subject to a copyright claim if
+              upload it on YouTube. Maybe I'll upload it on TikTok.
+            </p>
           </div>
           <br />
           <!-- my latest content (YT or Instagram) -->
           <h3>Travel Video</h3>
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/OSAPt_Od1oY"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/OSAPt_Od1oY"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              This is a collection of videos of me on vacation to various places
+              or the fancy term now is "healing". I started collecting these
+              videos from 2017-2020. Of course before there was a pandemic.
+            </p>
           </div>
           <p class="interest">
             Still want to see more? just go to my social media below to see
