--- a/portofolio.html
+++ b/portofolio.html
@@ -62,14 +62,14 @@
             onclick="closeSlideMenu()"
           ></a>
         </div>
-        <a href="id.html">Beranda</a>
+        <a href="./id.html">Beranda</a>
         <a href="portofolio.html">Portofolio ku</a>
       </div>
       <!-- main content here -->
       <section id="main">
         <div class="container">
           <!-- MAIN CONTENT HERE -->
-          <h1 style="font-size: x-large">Hasil karya terbaru aku</h1>
+          <h1 style="font-size: x-large">Portofolio ku</h1>
           <p>
             Ini semua video yang aku buat. Yeah.. masih jauh dari kata sempurna
             tapi aku terus mencoba untuk membuat cerita visual yang terbaik.
@@ -79,57 +79,91 @@
           <br />
           <!-- my latest content (YT or Instagram) -->
           <h3>Film Pendek</h3>
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/bJGLKNRZNv0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/bJGLKNRZNv0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Film pendek ini dibuat untuk tugas akhir kelas 12 SMK pada waktu
+              itu. Menceritakan tentang sosok anak yang kehilangan suatu benda
+              karena dicuri oleh teman sekelasnya. Namun pada akhirnya terungkap
+              siapa pelakunya meskipun si temannya tersebut tidak jujur. Kok
+              bisa terungkap sih? Ditonton kuy.
+            </p>
           </div>
           <br />
           <!-- my latest content (YT or Instagram) -->
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/4pK8O_4i50A"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/4pK8O_4i50A"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Pada film pendek ini aku selaku kreator pada channel punya
+              temanku. Menceritakan tentang seorang anak yang berbaik hati
+              mentraktir semua teman-teman nya di sebuah warung. Namun niat
+              baiknya malah dijadikan peluang bagi salah satu temannya untuk
+              berbuat jahat. Kok jadi penasaran yak... makanya ditonton kuy.
+            </p>
           </div>
           <br />
           <!-- my latest content (YT or Instagram) -->
           <h3>Video Lirik</h3>
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/4fhnXH8IemM"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/4fhnXH8IemM"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Video ini sebenarnya aku buat disaat waktu luang. Ingin aku
+              lanjutkan untuk membuat lirik video namun bakal kena klaim hak
+              cipta kalo diunggah di YouTube. Mungkin bakal aku unggah di
+              TikTok.
+            </p>
           </div>
           <br />
           <!-- my latest content (YT or Instagram) -->
           <h3>Video Perjalanan</h3>
-          <div class="responsive-youtube">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/OSAPt_Od1oY"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+          <div class="wrap-box">
+            <div class="responsive-youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/OSAPt_Od1oY"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              Ini adalah kumpulan video aku berlibur ke berbagai tempat atau
+              istilah kerennya sekarang yaitu "healing". Aku mulai mengumpulkan
+              video-video ini mulai dari tahun 2017-2020. Pastinya sebelum ada
+              pandemi.
+            </p>
           </div>
           <p class="interest">
             Masih ingin lihat lebih banyak? pergi ke media sosial aku di bawah
