--- a/id.html
+++ b/id.html
@@ -26,6 +26,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+
+    <!-- plyr.css -->
+    <link rel="stylesheet" href="./styles/plyr.css" />
+
   </head>
   <body>
     <!-- main body -->
@@ -62,7 +66,7 @@
             onclick="closeSlideMenu()"
           ></a>
         </div>
-        <a href="./index.html">Beranda</a>
+        <a href="./id.html">Beranda</a>
         <a href="portofolio.html">Portofolio ku</a>
       </div>
       <!-- main content here -->
@@ -103,30 +107,51 @@
           <!-- MAIN CONTENT HERE -->
           <h3>Hasil karya terbaru aku</h3>
           <!-- my content (YT or Instagram) -->
-          <div class="wrap-box">
-            <div class="responsive-youtube">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/bJGLKNRZNv0"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
+          <div class="content-wrapper">
             <p>
-              Film pendek ini dibuat untuk tugas akhir kelas 12 SMK pada waktu
-              itu. Menceritakan tentang sosok anak yang kehilangan suatu benda
-              karena dicuri oleh teman sekelasnya. Namun pada akhirnya terungkap
-              siapa pelakunya meskipun si temannya tersebut tidak jujur. Kok
-              bisa terungkap sih? Ditonton kuy.
+              <strong>Film Pendek</strong>
             </p>
+            <div class="wrap-box">
+              <div class="responsive-youtube">
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/bJGLKNRZNv0"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <p>
+                Film pendek ini dibuat untuk tugas akhir kelas 12 SMK pada waktu
+                itu. Menceritakan tentang sosok anak yang kehilangan suatu benda
+                karena dicuri oleh teman sekelasnya. Namun pada akhirnya
+                terungkap siapa pelakunya meskipun si temannya tersebut tidak
+                jujur. Kok bisa terungkap sih? Ditonton kuy.
+              </p>
+            </div>
+            <br>
+            <p>
+              <strong>Video Perjalanan</strong>
+            </p>
+              <div class="wrap-box">
+                <div class="plyr-wrap">
+                  <!-- content here -->
+                  <video id="player" crossorigin playsinline data-poster="./content/GoaResi.jpg" controls >
+                    <source src="./content/GoaResi.mp4" type="video/mp4"/ size="1080">
+                  </video>
+                </div>
+                <p>
+                  Di penghujung bulan Maret, aku sekeluarga pergi "healing" ke
+                  Gua Resi yang berada di Kecamatan Bulukerto, Kabupaten
+                  Wonogiri, Jawa Tengah. Video ini juga dapat kalian lihat di akun IG ku lhoo...
+                </p>
+              </div>
+              <p class="interest">
+                Ingin lihat lebih banyak hasil karya ku? pergi ke 'Portofolio ku'.
+                </p>
           </div>
-          <p class="interest">
-            Ingin lihat lebih banyak hasil karya ku? pergi ke 'Portofolio ku'.
-          </p>
-        </div>
         <br />
         <!-- footer here -->
         <footer>
@@ -179,5 +204,7 @@
         document.getElementById("main").style.marginLeft = "0px";
       }
     </script>
+    <!-- plyr framework -->
+    <script src="./content/js/plyr.js" crossorigin="anonymous"></script>
   </body>
 </html>
