--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+
+    <!-- plyr.css -->
+    <link rel="stylesheet" href="./styles/plyr.css" />
   </head>
   <body>
     <!-- main body -->
@@ -106,29 +109,48 @@
           <!-- MAIN CONTENT HERE -->
           <h3>My latest creation</h3>
           <!-- my content (YT or Instagram) -->
-          <div class="wrap-box">
-            <div class="responsive-youtube">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/bJGLKNRZNv0"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+          <div class="content-wrapper">
+            <p><strong>Short Movie</strong></p>
+            <div class="wrap-box">
+              <div class="responsive-youtube">
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/bJGLKNRZNv0"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <p>
+                This short film was made for the final assignment of class 12
+                Vocational High School at that time. Tells about the figure of a
+                child who lost his things because it was stolen by a classmate.
+                But in the end it was revealed who the culprit even though the
+                classmate was not honest. How can it be revealed? go watch it.
+              </p>
             </div>
+            <br>
             <p>
-              This short film was made for the final assignment of class 12
-              Vocational High School at that time. Tells about the figure of a
-              child who lost his things because it was stolen by a classmate.
-              But in the end it was revealed who the culprit even though the
-              classmate was not honest. How can it be revealed? go watch it.
+              <strong>Travel Video</strong>
+            </p>
+            <div class="wrap-box">
+              <div class="plyr-wrap">
+                <!-- content here -->
+                  <video id="player" crossorigin playsinline data-poster="./content/GoaResi.jpg" controls >
+                    <source src="./content/GoaResi.mp4" type="video/mp4"/ size="1080">
+                  </video>
+                </div>
+                <p>
+                  At the end of March, my family and I went "healing" to Gua Resi, which is located in Bulukerto District, Wonogiri Regency, Central Java. You can see this video on my IG account too...
+                </p>
+              </div>
+            </div>
+            <p class="interest">
+              Want to see more of my creation? just go to 'My portfolio'.
             </p>
           </div>
-          <p class="interest">
-            Want to see more of my creation? just go to 'My portfolio'.
-          </p>
         </div>
         <br />
         <!-- footer here -->
@@ -182,5 +204,7 @@
         document.getElementById("main").style.marginLeft = "0px";
       }
     </script>
+    <!-- plyr framework -->
+    <script src="./content/js/plyr.js" crossorigin="anonymous"></script>
   </body>
 </html>
