updating some elements + new content

--- a/id.html
+++ b/id.html
@@ -139,7 +139,7 @@
                 <div class="plyr-wrap">
                   <!-- content here -->
                   <video id="player" crossorigin playsinline data-poster="./content/GoaResi.jpg" controls >
-                    <source src="./content/GoaResi.mp4" type="video/mp4"/ size="1080">
+                    <source src="https://media.githubusercontent.com/media/gntrr/GNTRR-Web/main/content/GoaResi.mp4" type="video/mp4"/ size="1080">
                   </video>
                 </div>
                 <p>
