--- a/portofolio.html
+++ b/portofolio.html
@@ -179,8 +179,9 @@
                 data-poster="./content/GoaResi.jpg"
                 controls
               >
-                <source src="./content/GoaResi.mp4" type="video/mp4"/
-                size="1080">
+                <source
+                src="https://media.githubusercontent.com/media/gntrr/GNTRR-Web/main/content/GoaResi.mp4"
+                type="video/mp4"/ size="1080">
               </video>
             </div>
             <p>
